removed link-to inside link-to

--- a/addon/templates/application.hbs
+++ b/addon/templates/application.hbs
@@ -2,7 +2,7 @@
   <div class="navbar">
     {{#md-navbar name='BDE Workflow Monitor' homeRoute='pipelines'}}
       {{#link-to 'pipelines' tagName='li'}}
-        {{link-to 'Workflows' 'pipelines'}}
+        Workflows
       {{/link-to}}
     {{/md-navbar}}
   </div>
